# citrus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
citrus/: Cargo.toml
citrus/src/: deserialize_context.rs  element.rs  entity.rs  lib.rs  scene_editor.rs  scene_serde.rs
ecs/: Cargo.toml
ecs/src/: deserialize_context.rs  editor_helpers.rs  element.rs  entity.rs  lib.rs  reflection.rs  scene_editor.rs  scene_serde.rs
imgui-test/: Cargo.toml  README.md
imgui-test/src/: main.rs
imgui-test/support/: clipboard.rs  mod.rs
src/: component.rs  element.rs  entity.rs  lib.rs  manager.rs  mod.rs
