[package]
name = "citrus-ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.59" }
uuid = { version = "0.8", features = ["v4"] }
lazy_static = {version =  "1.4.0" }
nfd = { version = "0.0.4", optional = true }
imgui = { version = "0.8.2", optional = true }

[features]
default = ["gen-imgui"]
gen-imgui = ["imgui", "nfd"]