[package]
name = "ecs-imgui-test"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.59" }
uuid = { version = "0.8", features = ["v4"] }
clipboard = { version = "0.5.0" }
glium = { version = "0.29", default-features = true }
imgui = { version = "0.7.0" }
imgui-glium-renderer = { version = "0.7.0" }
imgui-winit-support = { version = "0.7.1" }
nfd = { version = "0.0.4" }
ecs = { path = "../ecs" }