[package]
name = "ecs-imgui-test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.59" }
uuid = { version = "0.8", features = ["v4"] }
clipboard = { version = "0.5.0" }
imgui-glium-renderer = { version = "0.8.2" }
imgui-winit-support = { version = "0.8.2" }
citrus-ecs = { path = "../citrus" }
glium = { version = "0.30.0" }